--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,5 +16,6 @@ markdown-spellcheck:
   stage: build
   image: registry.gitlab.com/pipeline-components/markdown-spellcheck:latest
   script:
+    - pwd
     - npm i markdown-spellcheck -g
     - mdspell --report '**/*.md'
