--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,13 +8,16 @@
 #
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/README.html#stages
 
+default:
+  image: registry.gitlab.com/pipeline-components/markdown-spellcheck:latest
+
+
 stages:          # List of stages for jobs, and their order of execution
   - build
 
 
 markdown-spellcheck:
   stage: build
-  image: registry.gitlab.com/pipeline-components/markdown-spellcheck:latest
   script:
     - pwd
     - npm i markdown-spellcheck -g
