--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ markdown-spellcheck:
   tags: 
     - shared_docker
   before_script:
+    - apt install nodejs
     - apt install npm
     - npm i markdown-spellcheck -g
   script:
