--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@
 # Image that is used in markdown spellcheck examples:
 # image: "registry.gitlab.com/pipeline-components/markdown-spellcheck:latest"
 
-image: ubuntu:18.04
+image: ubuntu:22.04
 
 
 stages:          # List of stages for jobs, and their order of execution
@@ -39,5 +39,22 @@ markdown-spellcheck:
     paths:
       - spellcheck-report.md
     expire_in: 1 week
+
+
+vale-linting:
+  image:
+    name: jdkato/vale:latest
+    entrypoint: [""]
+  stage: build
+  allow_failure: true  
+  before_script:
+    - apk update && apk add git
+  script:
+    - git config --global user.email "support.robotics@ifm.com"
+    - git config --global user.name "ifm-csr"
+    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab-ee.dev.ifm/syntron/support/csr/formatting-tools.git
+    - cd formatting-tools
+    - vale --minAlertLevel error /builds/syntron/support/csr/o3r/o3r-ods-example/.
+  when: manual    
 
 
