--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,8 +28,9 @@ vale-linting:
   script:
     - git config --global user.email "support.robotics@ifm.com"
     - git config --global user.name "ifm-csr"
+    - ls /builds/syntron/support/csr/o3r/
     - mkdir -p /builds/syntron/support/csr/o3r/vale
-    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab-ee.dev.ifm/syntron/support/csr/formatting-tools.git /builds/syntron/support/csr/o3r/formatting-tools
+    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab-ee.dev.ifm/syntron/support/csr/formatting-tools.git /builds/syntron/support/csr/o3r/vale
     - cd /builds/syntron/support/csr/o3r/vale
     - pwd
     - vale --minAlertLevel error /builds/syntron/support/csr/o3r/documentation/.
