--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,8 @@ vale-linting:
     - ls -la /builds/syntron/support/csr/o3r/formatting-tools
     # - mkdir -p /builds/syntron/support/csr/o3r/vale
     # - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab-ee.dev.ifm/syntron/support/csr/formatting-tools.git /builds/syntron/support/csr/o3r/vale
-    # - cd /builds/syntron/support/csr/o3r/vale
+    - cd /builds/syntron/support/csr/o3r/formatting-tools
     # - pwd
-    # - vale --minAlertLevel error /builds/syntron/support/csr/o3r/documentation/.
+    - vale --minAlertLevel error /builds/syntron/support/csr/o3r/documentation/.
 
 
