--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,12 +28,10 @@ vale-linting:
   script:
     - git config --global user.email "support.robotics@ifm.com"
     - git config --global user.name "ifm-csr"
-    - ls /builds/syntron/support/csr/o3r/
-    - ls -la /builds/syntron/support/csr/o3r/formatting-tools
-    # - mkdir -p /builds/syntron/support/csr/o3r/vale
-    # - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab-ee.dev.ifm/syntron/support/csr/formatting-tools.git /builds/syntron/support/csr/o3r/vale
+    - rm -rf formatting-tools vale
+    - mkdir -p /builds/syntron/support/csr/o3r/formatting-tools
+    - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab-ee.dev.ifm/syntron/support/csr/formatting-tools.git /builds/syntron/support/csr/o3r/formatting-tools
     - cd /builds/syntron/support/csr/o3r/formatting-tools
-    # - pwd
     - vale --minAlertLevel error /builds/syntron/support/csr/o3r/documentation/.
 
 
