--- a/ODS/Python/examples/configs/ods_two_heads_config.json
+++ b/ODS/Python/examples/configs/ods_two_heads_config.json
@@ -4,6 +4,7 @@
         "app0": {
           "class": "ods",
           "configuration": {
+            "activePorts": ["port2","port3"],
             "port2": {
               "acquisition": {
                 "channelValue": 10
@@ -14,9 +15,16 @@
                 "channelValue": -10
               }
             },
-            "vo": {
-              "portNumber": 2
-            }
+            "maxNumSimultaneousCameras":2,
+            "grid": {
+                "maxHeight": 1.4
+            },
+            "zones": {
+                "zoneCoordinates": [
+                    [[0, 1], [1, 1], [1, -1], [0, -1]],
+                    [[1, 1], [2, 1], [2, -1], [1, -1]],
+                    [[2, 1], [3.5, 1], [3.5, -1], [2, -1]]]
+            }     
           },
           "name": "app0",
           "ports": [
