--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ vale-linting:
   script:
     - git config --global user.email "support.robotics@ifm.com"
     - git config --global user.name "ifm-csr"
-    - rm -rf formatting-tools vale
+    - rm -rf /builds/syntron/support/csr/o3r/formatting-tools /builds/syntron/support/csr/o3r/vale
     - mkdir -p /builds/syntron/support/csr/o3r/formatting-tools
     - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab-ee.dev.ifm/syntron/support/csr/formatting-tools.git /builds/syntron/support/csr/o3r/formatting-tools
     - cd /builds/syntron/support/csr/o3r/formatting-tools
