--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,13 +79,22 @@ auto-docs-generation:
 trigger_developer-portal:
   stage: deploy
   rules:
-    - when: always
+    - if: '$CI_COMMIT_BRANCH =~ /^release\/fw-.*/'
+      when: always
+    - when: manual
   before_script:
     - apt update && apt install -y curl
   script:
     - >
+      if [ "$CI_COMMIT_BRANCH" = "main" ]; then
+        TARGET_BRANCH="main";
+      else
+        TARGET_BRANCH="test/lola";
+      fi;
+      echo "Triggering Developer Portal on branch: $TARGET_BRANCH"
+    - >
       curl --request POST \
         --form token=$DEVELOPER_PORTAL_TRIGGER_TOKEN \
-        --form ref=test/lola \
+        --form ref=$TARGET_BRANCH \
         --form "variables[O3R_DOC_BRANCH]=$CI_COMMIT_REF_NAME" \
         https://gitlab-ee.dev.ifm/api/v4/projects/2070/trigger/pipeline
